[package]
name = "rememberthemilk"
version = "0.1.1"
authors = ["Chris Emerson <github@mail.nosreme.org>"]
edition = "2018"
license = "MIT"
description = "Client library for the Remember The Milk todo list service."
homepage = "https://github.com/jugglerchris/rememberthemilk-rs"
repository = "https://github.com/jugglerchris/rememberthemilk-rs"
readme = "README.md"
keywords = ["todo", "rememberthemilk"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1"
md5 = "0.7"
chrono = {version = "0.4", features = ["serde"] }
structopt = "0.3"
confy = "0.4"
atty = "0.2"
termcolor = "1.1"

[[bin]]
name = "rtm"

[dev-dependencies]
mockito = "0.25"
