[package]
name = "rememberthemilk"
version = "0.1.1"
authors = ["Chris Emerson <github@mail.nosreme.org>"]
edition = "2018"
license = "MIT"
description = "Client library for the Remember The Milk todo list service."
homepage = "https://github.com/jugglerchris/rememberthemilk-rs"
repository = "https://github.com/jugglerchris/rememberthemilk-rs"
readme = "README.md"
keywords = ["todo", "rememberthemilk"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
md5 = "0.7"
chrono = {version = "0.4", features = ["serde"] }
structopt = "0.3"
confy = "0.5.1"
atty = "0.2"
termcolor = "1.4"
env_logger = "0.10.0"
log = "0.4.17"
ratatui = { version = "0.25", optional = true }
tui-tree-widget = { version = "0.16", optional = true }
crossterm = { version = "0.27", optional = true, features = ["event-stream"] }
tokio-stream = "0.1.12"
unicode-width = "0.1.10"

[[bin]]
name = "rtm"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:tui-tree-widget", "dep:crossterm"]

[dev-dependencies]
mockito = "1.2"
